[gd_scene load_steps=5 format=3 uid="uid://c1584iplg8kg5"]

[ext_resource type="Script" path="res://addons/hyh.digression/editor/controls/VariableValueEditControl.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://c31q0dbk4i25w" path="res://addons/hyh.digression/editor/controls/VariableSelectionControl.tscn" id="2_iu1w0"]
[ext_resource type="PackedScene" uid="uid://f44ru47mc3pp" path="res://addons/hyh.digression/editor/validation/ValidationWarning.tscn" id="2_j0s0b"]
[ext_resource type="Texture2D" uid="uid://byq26nj6velhb" path="res://addons/hyh.digression/icons/icon_copy.svg" id="2_rieia"]

[node name="VariableValueEdit" type="MarginContainer"]
anchors_preset = -1
anchor_right = 0.18
anchor_bottom = 0.067
offset_right = -0.360016
offset_bottom = -0.416
size_flags_horizontal = 3
script = ExtResource("1")

[node name="HB" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VariableCheckButton" type="Button" parent="HB"]
layout_mode = 2
tooltip_text = "Use the value of a variable."
toggle_mode = true
icon = ExtResource("2_rieia")
flat = true

[node name="SelectionContainer" type="MarginContainer" parent="HB"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EditContainer" type="MarginContainer" parent="HB/SelectionContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="HB/SelectionContainer/EditContainer"]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
caret_blink = true
caret_blink_interval = 0.5

[node name="SpinBox" type="SpinBox" parent="HB/SelectionContainer/EditContainer"]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
allow_greater = true
allow_lesser = true

[node name="CheckBox" type="CheckBox" parent="HB/SelectionContainer/EditContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "On"

[node name="VariableSelectionControl" parent="HB/SelectionContainer" instance=ExtResource("2_iu1w0")]
visible = false
layout_mode = 2

[node name="ValidationWarning" parent="HB" instance=ExtResource("2_j0s0b")]
visible = false
layout_mode = 2

[connection signal="toggled" from="HB/VariableCheckButton" to="." method="_on_variable_check_button_toggled"]
[connection signal="text_changed" from="HB/SelectionContainer/EditContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="changed" from="HB/SelectionContainer/EditContainer/SpinBox" to="." method="_on_spin_box_changed"]
[connection signal="value_changed" from="HB/SelectionContainer/EditContainer/SpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="pressed" from="HB/SelectionContainer/EditContainer/CheckBox" to="." method="_on_check_box_pressed"]
[connection signal="variable_selected" from="HB/SelectionContainer/VariableSelectionControl" to="." method="_on_variable_selection_control_variable_selected"]
